--- a/CodeGenerator/Generator1/Generator1.csproj
+++ b/CodeGenerator/Generator1/Generator1.csproj
@@ -8,7 +8,8 @@
 
   <ItemGroup>
     <None Update="XmlGenerator.tt">
-      <Generator></Generator>
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>XmlGenerator.cs</LastGenOutput>
     </None>
   </ItemGroup>
 
@@ -16,8 +17,16 @@
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="XmlGenerator.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>XmlGenerator.tt</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
 	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-		<Exec Command="'$(DevEnvDir)TextTransformCore.exe' '$(ProjectDir)XmlGenerator.tt'" />
+		<Exec Command="'$(DevEnvDir)TextTransformFileGenerator.exe' '$(ProjectDir)XmlGenerator.tt'" />
 	</Target>
 
 </Project>
